--- a/internal/nginx/templates/nginx.ingress.tmpl
+++ b/internal/nginx/templates/nginx.ingress.tmpl
@@ -22,6 +22,6 @@ server {
 		proxy_set_header X-Forwarded-Host $host;
 		proxy_set_header X-Forwarded-Port $server_port;
 
-		proxy_pass http://{{$location.Upstream.Name}};
+		proxy_pass http://{{$location.Upstream.Name}}{{$location.Rewrite}};
 	}{{end}}
 }{{end}}
