support nginx stub status
Signed-off-by: qinpengfei <qinpengfei.2008@163.com>

--- a/internal/nginx/templates/nginx.ingress.tmpl
+++ b/internal/nginx/templates/nginx.ingress.tmpl
@@ -24,4 +24,8 @@ server {
 
 		proxy_pass http://{{$location.Upstream.Name}}{{$location.Rewrite}};
 	}{{end}}
+
+	location = /nginx_stub_status {
+		stub_status;
+	}
 }{{end}}
